--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>HEP C - Venier Project</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
 <header>
   <h1>HEP C - Venier Project</h1>
   <nav>
@@ -15,34 +16,62 @@
       <li><a href="services.html">Services</a></li>
       <li><a href="partners.html">Partners</a></li>
       <li><a href="resources.html">Resources</a></li>
+      <li><a href="roadmap.html">Roadmap</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
 
 <main>
+  <section class="hero">
+    <h2>Working Toward Hepatitis C Elimination in Ontario</h2>
+    <p>We aim to close the gap between testing and treatment by bringing Hep C care directly to the communities that need it most—through screening, linkage, and education.</p>
+  </section>
 
-<h2>Welcome to the HEP C - Venier Project</h2>
-<p>We are dedicated to bridging the gap between testing and treatment for Hepatitis C, focusing on underprivileged and marginalized communities.</p>
-<div class="stats">
-  <div class="stat">
-    <h3>500+</h3>
-    <p>Patients Screened</p>
-  </div>
-  <div class="stat">
-    <h3>25</h3>
-    <p>Partner Clinics</p>
-  </div>
-  <div class="stat">
-    <h3>10+</h3>
-    <p>Communities Served</p>
-  </div>
-</div>
-<div class="image-banner">
-  <img src="https://via.placeholder.com/800x300.png?text=HEP+C+Outreach" alt="Outreach" />
-</div>
+  <section class="stat-cards">
+    <div class="card">
+      <h3>500+</h3>
+      <p>Clients screened using point-of-care testing</p>
+    </div>
+    <div class="card">
+      <h3>80%</h3>
+      <p>Direct linkage to pharmacy-based treatment</p>
+    </div>
+    <div class="card">
+      <h3>25+</h3>
+      <p>Community partners across Ontario</p>
+    </div>
+  </section>
 
+  <section class="focus-section">
+    <h3>Why We Focus on Marginalized Communities</h3>
+    <div class="focus-grid">
+      <div class="focus-card">
+        <img src="https://img.icons8.com/ios/100/health-checkup.png" alt="Testing">
+        <p><strong>Equity in Access</strong><br>We bring screening and care to people who use drugs, Indigenous populations, and LGBTQ+ communities.</p>
+      </div>
+      <div class="focus-card">
+        <img src="https://img.icons8.com/ios/100/stethoscope.png" alt="Linkage">
+        <p><strong>Smart Linkage</strong><br>Our program connects patients directly to treatment through pharmacy-based models.</p>
+      </div>
+      <div class="focus-card">
+        <img src="https://img.icons8.com/ios/100/education.png" alt="Education">
+        <p><strong>Education & Empowerment</strong><br>We train clinics and communities in rapid Hep C diagnosis and care navigation.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="ontario-map">
+    <h3>Where We Work</h3>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Ontario_Canada_location_map.svg/800px-Ontario_Canada_location_map.svg.png" alt="Ontario Map" />
+    <p>Our network spans rural and urban communities, prioritizing access where it’s needed most.</p>
+  </section>
+
+  <section class="image-banner">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Hepatitis_C_Liver_Damage_Stages_diagram.svg" alt="Hepatitis C Liver Stages" />
+  </section>
 </main>
+
 <footer>
   <p>&copy; 2025 HEP C - Venier Project. All rights reserved.</p>
 </footer>
