--- a/index.html
+++ b/index.html
@@ -1,80 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>HEP C - Venier Project</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <style>
+    body {
+      font-family: 'Kanit', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #fffaf5;
+    }
+    header {
+      background-color: #ff9f43;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .logo img {
+      height: 50px;
+    }
+    nav {
+      display: flex;
+      gap: 1rem;
+    }
+    nav a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+    }
+    .hero {
+      background: url('images/istockphoto-1496167879-612x612.jpg') center/cover no-repeat;
+      color: white;
+      padding: 6rem 2rem;
+      text-align: center;
+      position: relative;
+    }
+    .hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.6);
+    }
+    .hero h1,
+    .hero p {
+      position: relative;
+      z-index: 2;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      margin: 0;
+    }
+    .hero p {
+      font-size: 1.5rem;
+    }
+    .cards {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      padding: 2rem;
+    }
+    .card {
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      margin: 1rem;
+      padding: 1.5rem;
+      flex: 1 1 300px;
+      max-width: 400px;
+    }
+    footer {
+      background-color: #ffcc99;
+      text-align: center;
+      padding: 1rem;
+    }
+  </style>
 </head>
 <body>
 
 <header>
-  <h1>HEP C - Venier Project</h1>
+  <div class="logo">
+    <img src="assets/imgs/logo-light.png" alt="HEP C Logo">
+  </div>
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="partners.html">Partners</a></li>
-      <li><a href="resources.html">Resources</a></li>
-      <li><a href="roadmap.html">Roadmap</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="service.html">Services</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
 
-<main>
-  <section class="hero">
-    <h2>Working Toward Hepatitis C Elimination in Ontario</h2>
-    <p>We aim to close the gap between testing and treatment by bringing Hep C care directly to the communities that need it most—through screening, linkage, and education.</p>
-  </section>
+<section class="hero">
+  <h1>Bridging Gaps in Hepatitis C Care</h1>
+  <p>Targeting underserved communities across Ontario</p>
+</section>
 
-  <section class="stat-cards">
-    <div class="card">
-      <h3>500+</h3>
-      <p>Clients screened using point-of-care testing</p>
-    </div>
-    <div class="card">
-      <h3>80%</h3>
-      <p>Direct linkage to pharmacy-based treatment</p>
-    </div>
-    <div class="card">
-      <h3>25+</h3>
-      <p>Community partners across Ontario</p>
-    </div>
-  </section>
-
-  <section class="focus-section">
-    <h3>Why We Focus on Marginalized Communities</h3>
-    <div class="focus-grid">
-      <div class="focus-card">
-        <img src="https://img.icons8.com/ios/100/health-checkup.png" alt="Testing">
-        <p><strong>Equity in Access</strong><br>We bring screening and care to people who use drugs, Indigenous populations, and LGBTQ+ communities.</p>
-      </div>
-      <div class="focus-card">
-        <img src="https://img.icons8.com/ios/100/stethoscope.png" alt="Linkage">
-        <p><strong>Smart Linkage</strong><br>Our program connects patients directly to treatment through pharmacy-based models.</p>
-      </div>
-      <div class="focus-card">
-        <img src="https://img.icons8.com/ios/100/education.png" alt="Education">
-        <p><strong>Education & Empowerment</strong><br>We train clinics and communities in rapid Hep C diagnosis and care navigation.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="ontario-map">
-    <h3>Where We Work</h3>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Ontario_Canada_location_map.svg/800px-Ontario_Canada_location_map.svg.png" alt="Ontario Map" />
-    <p>Our network spans rural and urban communities, prioritizing access where it’s needed most.</p>
-  </section>
-
-  <section class="image-banner">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Hepatitis_C_Liver_Damage_Stages_diagram.svg" alt="Hepatitis C Liver Stages" />
-  </section>
-</main>
+<section class="cards">
+  <div class="card">
+    <h2>Our Mission</h2>
+    <p>We aim to bridge the gap between screening and treatment for Hepatitis C, focusing on marginalized populations including Indigenous peoples, rural communities, and LGBTQ+ individuals.</p>
+  </div>
+  <div class="card">
+    <h2>What We Offer</h2>
+    <p>We provide point-of-care testing, pharmacist-led treatment pathways, educational materials, and downloadable resources to increase accessibility.</p>
+  </div>
+  <div class="card">
+    <h2>Join the Movement</h2>
+    <p>We welcome collaboration from clinics, pharmacies, researchers, and community organizations. Help us eliminate Hep C in Ontario!</p>
+  </div>
+</section>
 
 <footer>
-  <p>&copy; 2025 HEP C - Venier Project. All rights reserved.</p>
+  &copy; 2025 HEP C - Venier Project. All rights reserved.
 </footer>
 
 </body>
 </html>
+
