--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     .hero {
       background: url('images/istockphoto-1496167879-612x612.jpg') center/cover no-repeat;
       color: white;
-      padding: 6rem 2rem;
+      padding: 10rem 4rem;
       text-align: center;
       position: relative;
     }
@@ -109,6 +109,28 @@
   <div class="card">
     <h2>Join the Movement</h2>
     <p>We welcome collaboration from clinics, pharmacies, researchers, and community organizations. Help us eliminate Hep C in Ontario!</p>
+  </div>
+</section>
+
+<section class="facts">
+  <h2 style="text-align:center; color:#4a2e00;">Understanding Hep C</h2>
+  <div class="cards">
+    <div class="card">
+      <h3>💡 Did you know?</h3>
+      <p>More than 250,000 people are living with Hepatitis C in Canada—many don’t even know it.</p>
+    </div>
+    <div class="card">
+      <h3>🧪 Easy Testing</h3>
+      <p>Rapid point-of-care tests can detect Hep C antibodies in under 20 minutes with a finger prick.</p>
+    </div>
+    <div class="card">
+      <h3>💊 Easy Cure</h3>
+      <p>Treatment is now over 95% effective, taken as pills for just 8 to 12 weeks — no injections required!</p>
+    </div>
+    <div class="card">
+      <h3>🏳️‍🌈 At-Risk Communities</h3>
+      <p>Hep C disproportionately affects people who use drugs, Indigenous communities, and 2SLGBTQ+ individuals.</p>
+    </div>
   </div>
 </section>
 
