--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
       flex: 1 1 300px;
       max-width: 400px;
     }
+    .facts {
+      background-color: #fff2e6;
+      padding: 3rem 2rem;
+    }
+    .facts h2 {
+      margin-bottom: 2rem;
+    }
     footer {
       background-color: #ffcc99;
       text-align: center;
