--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
     <p>We welcome collaboration from clinics, pharmacies, researchers, and community organizations. Help us eliminate Hep C in Ontario!</p>
   </div>
 </section>
-
+  
+<section class="facts">
 <section class="facts">
   <h2 style="text-align:center; color:#4a2e00;">Understanding Hep C</h2>
   <div class="cards">
