--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
   <h2 style="text-align:center; color:#4a2e00;">Understanding Hep C</h2>
   <div class="cards">
     <div class="card">
-      <h3>💡 Did you know?</h3>
+      <h3> Did you know?</h3>
       <p>More than 250,000 people are living with Hepatitis C in Canada—many don’t even know it.</p>
     </div>
     <div class="card">
-      <h3>🧪 Easy Testing</h3>
+      <h3> Easy Testing</h3>
       <p>Rapid point-of-care tests can detect Hep C antibodies in under 20 minutes with a finger prick.</p>
     </div>
     <div class="card">
-      <h3>💊 Easy Cure</h3>
+      <h3>Easy Cure</h3>
       <p>Treatment is now over 95% effective, taken as pills for just 8 to 12 weeks — no injections required!</p>
     </div>
     <div class="card">
-      <h3>🏳️‍🌈 At-Risk Communities</h3>
+      <h3>At-Risk Communities</h3>
       <p>Hep C disproportionately affects people who use drugs, Indigenous communities, and 2SLGBTQ+ individuals.</p>
     </div>
   </div>
