--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
   <meta charset="UTF-8">
   <title>HEP C - Venier Project</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/style.css">
+
+  <!-- Roboto Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="assets/css/style.css">
   <style>
     body {
-      font-family: 'Kanit', sans-serif;
+      font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
       background-color: #fffaf5;
     }
+
     header {
       background-color: #ff9f43;
       padding: 1rem 2rem;
@@ -20,18 +24,22 @@
       justify-content: space-between;
       align-items: center;
     }
+
     .logo img {
       height: 50px;
     }
+
     nav {
       display: flex;
       gap: 1rem;
     }
+
     nav a {
       text-decoration: none;
       color: #fff;
       font-weight: bold;
     }
+
     .hero {
       background: url('images/istockphoto-1496167879-612x612.jpg') center/cover no-repeat;
       color: white;
@@ -39,30 +47,36 @@
       text-align: center;
       position: relative;
     }
+
     .hero::before {
       content: "";
       position: absolute;
       inset: 0;
       background: rgba(0, 0, 0, 0.6);
     }
+
     .hero h1,
     .hero p {
       position: relative;
       z-index: 2;
     }
+
     .hero h1 {
-      font-size: 3rem;
+      font-size: 3.2rem;
       margin: 0;
     }
+
     .hero p {
-      font-size: 1.5rem;
+      font-size: 1.6rem;
     }
+
     .cards {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
       padding: 2rem;
     }
+
     .card {
       background: white;
       border-radius: 10px;
@@ -72,13 +86,18 @@
       flex: 1 1 300px;
       max-width: 400px;
     }
+
     .facts {
       background-color: #fff2e6;
       padding: 3rem 2rem;
     }
+
     .facts h2 {
+      text-align: center;
+      color: #4a2e00;
       margin-bottom: 2rem;
     }
+
     footer {
       background-color: #ffcc99;
       text-align: center;
@@ -119,10 +138,9 @@
     <p>We welcome collaboration from clinics, pharmacies, researchers, and community organizations. Help us eliminate Hep C in Ontario!</p>
   </div>
 </section>
-  
+
 <section class="facts">
-<section class="facts">
-  <h2 style="text-align:center; color:#4a2e00;">Understanding Hep C</h2>
+  <h2>Understanding Hep C</h2>
   <div class="cards">
     <div class="card">
       <h3> Did you know?</h3>
@@ -133,11 +151,11 @@
       <p>Rapid point-of-care tests can detect Hep C antibodies in under 20 minutes with a finger prick.</p>
     </div>
     <div class="card">
-      <h3>Easy Cure</h3>
+      <h3> Easy Cure</h3>
       <p>Treatment is now over 95% effective, taken as pills for just 8 to 12 weeks — no injections required!</p>
     </div>
     <div class="card">
-      <h3>At-Risk Communities</h3>
+      <h3> At-Risk Communities</h3>
       <p>Hep C disproportionately affects people who use drugs, Indigenous communities, and 2SLGBTQ+ individuals.</p>
     </div>
   </div>
