--- a/about.html
+++ b/about.html
@@ -2,10 +2,107 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HEP C - Venier Project</title>
-  <link rel="stylesheet" href="style.css">
+  <title>About Us | HEP C - Venier Project</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Roboto Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      background-color: #fffaf5;
+    }
+
+    header {
+      background-color: #ff9f43;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h1 {
+      margin: 0;
+      color: #fff;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1rem;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+    }
+
+    main {
+      padding: 2rem;
+    }
+
+    .mission-card {
+      background: #ffe0b2;
+      border-left: 8px solid #ff8c00;
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+      border-radius: 8px;
+    }
+
+    .team {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      justify-content: center;
+      margin-bottom: 3rem;
+    }
+
+    .member {
+      text-align: center;
+      width: 200px;
+    }
+
+    .member img {
+      width: 100%;
+      border-radius: 10px;
+    }
+
+    .member h3 {
+      margin-top: 0.5rem;
+    }
+
+    .map-section {
+      text-align: center;
+      margin: 3rem 0;
+    }
+
+    .map-section img {
+      max-width: 100%;
+      height: auto;
+      border: 3px solid #ff9f43;
+      border-radius: 8px;
+    }
+
+    .partners {
+      background-color: #fff2e6;
+      padding: 2rem;
+      border-radius: 8px;
+    }
+
+    footer {
+      background-color: #ffcc99;
+      text-align: center;
+      padding: 1rem;
+    }
+  </style>
 </head>
 <body>
+
 <header>
   <h1>HEP C - Venier Project</h1>
   <nav>
@@ -21,9 +118,45 @@
 </header>
 
 <main>
-<h2>About Us</h2>
-<p>Our mission is to bring accessible Hepatitis C testing, treatment linkage, and educational support to marginalized communities including Indigenous people, individuals with addictions, those in small or remote communities, and the LGBTQ+ population.</p>
+
+  <div class="mission-card">
+    <h2>Our Mission</h2>
+    <p>We are a multidisciplinary team committed to eliminating Hepatitis C in Ontario. Our goal is to increase accessibility to testing and treatment in underrepresented communities including Indigenous peoples, people who use drugs, LGBTQ+ individuals, and residents of rural and remote regions. We use pharmacy-based interventions, mobile clinics, and educational outreach to build an inclusive health initiative from the ground up.</p>
+  </div>
+
+  <section class="team">
+    <div class="member">
+      <img src="images/team1.jpg" alt="Team Member 1">
+      <h3>Dr. Elisa Venier</h3>
+    </div>
+    <div class="member">
+      <img src="images/team2.jpg" alt="Team Member 2">
+      <h3>Scott Enman</h3>
+    </div>
+    <div class="member">
+      <img src="images/team4.jpg" alt="Team Member 4">
+      <h3>Sneha Nair</h3>
+    </div>
+  </section>
+
+  <section class="map-section">
+    <h2>Community Reach</h2>
+    <img src="images/ontario-map.png" alt="Ontario map with coverage dots">
+    <p>We've built connections across the province to help reach those most in need.</p>
+  </section>
+
+  <section class="partners">
+    <h2>Our Partners</h2>
+    <ul>
+      <li>Downtown East Community Health Centre</li>
+      <li>Niagara Regional Pharmacy Network</li>
+      <li>Rainbow Health Ontario</li>
+      <li>Northern Access Mobile Outreach</li>
+    </ul>
+  </section>
+
 </main>
+
 <footer>
   <p>&copy; 2025 HEP C - Venier Project. All rights reserved.</p>
 </footer>
