--- a/about.html
+++ b/about.html
@@ -141,7 +141,9 @@
 
   <section class="map-section">
     <h2>Community Reach</h2>
-    <img src="images/360_F_143629841_XQyK7bN3RtiEpdPX9VVUHv2UEuJF4IBS.jpg" alt="Ontario map with coverage dots">
+    <img src="images/360_F_143629841_XQyK7bN3RtiEpdPX9VVUHv2UEuJF4IBS.jpg"
+     alt="Ontario map with coverage dots"
+     style="width: 90%; max-width: 800px; border: 3px solid #ff9f43; border-radius: 8px;">
     <p>We've built connections across the province to help reach those most in need.</p>
   </section>
 
