--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="service.html">Services</a>
+    <a href="service.html">Partners</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
