--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="service.html">Services</a>
-    <a href="service.html">Partners</a>
+    <a href="services.html">Services</a>
+    <a href="partners.html">Partners</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
