--- a/services.html
+++ b/services.html
@@ -2,10 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HEP C - Venier Project</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Services | HEP C - Venier Project</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      background-color: #fffaf5;
+    }
+
+    header {
+      background-color: #ff9f43;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h1 {
+      margin: 0;
+      color: #fff;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1rem;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+    }
+
+    main {
+      padding: 2rem;
+    }
+
+    h2 {
+      text-align: center;
+      color: #4a2e00;
+    }
+
+    .service-cards {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      gap: 1.5rem;
+      margin-top: 2rem;
+    }
+
+    .card {
+      background-color: #ffffff;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      max-width: 300px;
+      flex: 1 1 280px;
+    }
+
+    .card h3 {
+      color: #ff9f43;
+      margin-top: 0;
+    }
+
+    footer {
+      background-color: #ffcc99;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
+
 <header>
   <h1>HEP C - Venier Project</h1>
   <nav>
@@ -21,9 +95,35 @@
 </header>
 
 <main>
-<h2>Our Services</h2>
-<ul><li>Quick Point-of-Care Screening and Testing</li><li>Pharmacy-Based Treatment Linkage</li><li>Educational Outreach & Public Awareness</li><li>Open Access to Research & Data</li><li>Appointment Booking & Referral Support</li><li>Interactive Maps of Testing Locations</li></ul>
+  <h2>Our Services</h2>
+  <section class="service-cards">
+    <div class="card">
+      <h3> Point-of-Care Screening</h3>
+      <p>Fast, accessible Hep C testing via community events and pharmacy partners — results in minutes.</p>
+    </div>
+    <div class="card">
+      <h3> Treatment Linkage</h3>
+      <p>We work directly with pharmacists to ensure seamless access to antiviral medications.</p>
+    </div>
+    <div class="card">
+      <h3> Education & Awareness</h3>
+      <p>Community outreach and peer-led education tailored to vulnerable and at-risk groups.</p>
+    </div>
+    <div class="card">
+      <h3> Open Research Access</h3>
+      <p>Sharing anonymized data and study results to inform better Hep C health equity solutions.</p>
+    </div>
+    <div class="card">
+      <h3> Referral & Booking</h3>
+      <p>Support for clinics, shelters, and care networks to refer patients to partner providers quickly.</p>
+    </div>
+    <div class="card">
+      <h3>Testing Locator Maps</h3>
+      <p>Interactive visual tools to help patients find the nearest participating pharmacies and clinics.</p>
+    </div>
+  </section>
 </main>
+
 <footer>
   <p>&copy; 2025 HEP C - Venier Project. All rights reserved.</p>
 </footer>
