--- a/partners.html
+++ b/partners.html
@@ -2,10 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HEP C - Venier Project</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Partners | HEP C - Venier Project</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      background-color: #fffaf5;
+    }
+
+    header {
+      background-color: #ff9f43;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h1 {
+      margin: 0;
+      color: #fff;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1rem;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+    }
+
+    main {
+      padding: 2rem;
+    }
+
+    h2 {
+      text-align: center;
+      color: #4a2e00;
+    }
+
+    .map-container {
+      margin: 2rem auto;
+      max-width: 800px;
+      border: 3px solid #ff9f43;
+      border-radius: 8px;
+      height: 500px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 8px;
+    }
+
+    .description {
+      text-align: center;
+      max-width: 700px;
+      margin: 0 auto 2rem auto;
+    }
+
+    footer {
+      background-color: #ffcc99;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
+
 <header>
   <h1>HEP C - Venier Project</h1>
   <nav>
@@ -21,9 +94,17 @@
 </header>
 
 <main>
-<h2>Our Partners</h2>
-<p>We are proud to work with community clinics, OAT pharmacies, shelters, and public health groups to deliver impactful services.</p>
+  <h2>Our Partners</h2>
+  <p class="description">
+    We are proud to work with a growing network of community clinics, OAT pharmacies, shelters, and public health groups to deliver impactful Hepatitis C care across Ontario.
+  </p>
+
+  <div class="map-container">
+    <!-- Replace this URL with your custom Google My Map -->
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ufMHgNqUFRU8CrY_jfjGge4AfIl0MYo&ehbc=2E312F" allowfullscreen></iframe>
+  </div>
 </main>
+
 <footer>
   <p>&copy; 2025 HEP C - Venier Project. All rights reserved.</p>
 </footer>
