--- a/partners.html
+++ b/partners.html
@@ -101,7 +101,7 @@
 
   <div class="map-container">
     <!-- Replace this URL with your custom Google My Map -->
-    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1ufMHgNqUFRU8CrY_jfjGge4AfIl0MYo&ehbc=2E312F" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/d/embed?mid=1YjgJ_jTzeYUzGW03Ceu38iOdUaAexh4&ehbc=2E312F" width="640" height="480"></iframe>
   </div>
 </main>
 
